@@ -91,9 +91,6 @@ extern "C"{
 #define VTS_PBOOL           "\x4B"      // a 'VARIANT_BOOL*'
 #define VTS_PVARIANT        "\x4C"      // a 'VARIANT*'
 #define VTS_PUNKNOWN        "\x4D"      // an 'IUnknown**'
-#ifndef VTS_PUI1
-#define VTS_PUI1            "\x4F"      // a 'BYTE*'
-#endif
 
 // special VT_ and VTS_ values
 #define VTS_NONE            NULL        // used for members with 0 params
